constraints/K8sMaxPods.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxPods
metadata:
  name: deployment-max-pods
spec:
  enforcementAction: deny      
  match:
    namespaces:
      - "prueba"      
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  parameters:
    replicas: 3
