constraints/K8sRequiredLabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: required-label-deployment
spec:
  enforcementAction: deny       
  match:
    namespaces:
      - "gatekeeper-project"      
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  parameters:
    labels: ["gatekeeper"]
